<resources>
    <string name="app_name" translatable="false">Ideainator</string>
    <string name="app_name_Split" translatable="false">【ＩＤＥＡ】\n【ＩＮＡＴＯＲ】</string>
    <string name="welcome">Welcome to</string>
    <string name="createGame">Create Game</string>
    <string name="joinGame">Join Game</string>
    <string name="round_txt">Round #</string>
    <string name="joinHeadline">Join an existing game....</string>
    <string name="writeCode">Insert the game code:</string>
    <string name="CodeHint" translatable="false">123</string>
    <string name="startButton">Lets Gooo!</string>
    <string name="vote">Review Results:</string>
    <string name="winnerIdeas">Winner Idea #</string>
    <string name="players">Players:</string>
    <string name="ClickHereWhenEveryoneArerRady">Click here when everyone are ready</string>
    <string name="lobby">Lobby</string>
    <string name="you">   ← You :) </string>
    <string name="SubmitBestOption">Send the best option:</string>
    <string name="pickYourFavorite">Pick your favorite solution:</string>
    <string name="voteSaved">Your vote has been saved</string>
    <string name="optionAllreadySelected">Slow down bucky, you have already chosen an option</string>
    <string name="shareCode">🏹 Send code</string>
    <string name="shareWinner">💌 Send idea</string>
    <string name="ShareCodeText">Gamecode for IdeaInator: </string>
    <string name="Gamealreadystarted">Game already started</string>
    <string name="RoomNotFound">Sorry, could not find the game</string>
    <string name="gameIsRunning">IdeaInator Game Is running</string>
    <string name="tapHereToResume">Tap here to return to the game</string>
    <string name="longPressToMute">Long press to mute the notification</string>
    <string name="endGame">End Game</string>
    <string name="waiting">Waiting...</string>
    <string name="havePatience">Patience, you must have.</string>
</resources>